--- a/Meter Card and Smart Parking Meter/Storyboards/Auth.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/Auth.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Uud-Jw-h7h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Uud-Jw-h7h">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -274,13 +274,13 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="5JY-DM-9Bc">
-                                        <rect key="frame" x="20" y="97" width="335" height="89.333333333333314"/>
+                                        <rect key="frame" x="20" y="97" width="335" height="90.333333333333314"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="AMV-ZW-Vwh">
-                                                <rect key="frame" x="125.66666666666666" y="0.0" width="84" height="34.666666666666664"/>
+                                                <rect key="frame" x="125.66666666666666" y="0.0" width="84" height="35.666666666666664"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lCR-4e-hBE">
-                                                <rect key="frame" x="37.333333333333343" y="47.666666666666657" width="260.66666666666663" height="41.666666666666657"/>
+                                                <rect key="frame" x="37.333333333333343" y="48.666666666666657" width="260.66666666666663" height="41.666666666666657"/>
                                                 <string key="text">Meter Card and Smart Parking
 Meter</string>
                                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
@@ -290,26 +290,23 @@ Meter</string>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xKe-dw-7gY">
-                                        <rect key="frame" x="20" y="186.33333333333334" width="335" height="390.33333333333326"/>
+                                        <rect key="frame" x="20" y="187.33333333333334" width="335" height="390.33333333333326"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="236-s1-izE">
-                                        <rect key="frame" x="20" y="576.66666666666663" width="335" height="163.33333333333337"/>
+                                        <rect key="frame" x="20" y="577.66666666666663" width="335" height="162.33333333333337"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="5Ym-1F-zhY">
-                                                <rect key="frame" x="0.0" y="0.0" width="335" height="115.33333333333333"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Ym-1F-zhY">
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="114.33333333333333"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LtC-Gc-3Uy">
-                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="62.333333333333336"/>
-                                                        <string key="text">Lorem ipsum dolor sit amet,
-consectetur
-adipiscing elit, sed do eiusmod</string>
-                                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LtC-Gc-3Uy">
+                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="39.333333333333336"/>
+                                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
                                                         <color key="textColor" name="FFFFFF"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5iv-WC-CKZ" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="68.333333333333371" width="335" height="47"/>
+                                                        <rect key="frame" x="0.0" y="67.333333333333371" width="335" height="47"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="47" id="a5l-Kz-Kfa"/>
@@ -321,7 +318,7 @@ adipiscing elit, sed do eiusmod</string>
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo7-TH-S3C">
-                                                <rect key="frame" x="0.0" y="133.33333333333337" width="335" height="30"/>
+                                                <rect key="frame" x="0.0" y="132.33333333333337" width="335" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="GOi-qp-rN9"/>
                                                 </constraints>
